# web

./: .gitignore  LICENSE  README.md  db.sqlite3  deploy.sh  django.yml  docker-compose-server.yml  docker-compose.yml  manage.py  pyproject.toml
docker-config/: nginx-server.dockerfile  nginx.conf  python-server.dockerfile  python.dockerfile  settings-server.py  start-server.sh  start.sh
interested/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
interested/migrations/: 0001_initial.py  0002_auto_20210423_1225.py  0003_auto_20210423_1236.py  0004_publicevent_capture.py  0005_eventmerch_event.py  0006_eventparticipant_invoice.py  0007_auto_20210510_0313.py  0008_eventparticipant_notes.py  0009_auto_20210513_1559.py  0010_auto_20210514_1057.py  0011_auto_20210514_1129.py  0012_publicevent_thumbnail.py  0013_auto_20220527_1732.py  0014_remove_publicevent_thumbnail.py  0015_auto_20220618_1131.py  0016_auto_20220625_2244.py  0017_contactperson.py  0018_auto_20220803_0354.py  0019_tester.py  0020_auto_20230321_0940.py  0021_auto_20230321_1016.py  (+3 more)
members/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
organizers/: forms.py  urls.py  views.py
shop/: admin.py  models.py  urls.py  views.py
static/: custom_style.css  desktop_style.scss  material.css  style.scss  tablet_style.scss
trainer/: forms.py  models.py  trainingsession.py  urls.py  views.py
twio_web/: asgi.py  secrets_example.py  settings.py  urls.py  views.py  wsgi.py
user_handling/: apps.py  backends.py  forms.py  permissions.py  signals.py  tokens.py  urls.py  views.py
(+326 files in other folders)
